--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -15,12 +15,15 @@
     "lint": "eslint . --fix --cache"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "js-cookie": "^3.0.5",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.18.11",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-typescript": "^14.6.0",
