--- a/backend/app/.env.example
+++ b/backend/app/.env.example
@@ -65,3 +65,9 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 SANCTUM_STATEFUL_DOMAINS=localhost:3000
 FRONTEND_URL=http://localhost:3000
+
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=ursename
+MAIL_PASSWORD=password
